Fixed comic sans not showing for header on dashboard

--- a/static/dashboard.scss
+++ b/static/dashboard.scss
@@ -65,3 +65,7 @@
     width: 200px;
     visibility: hidden;
 }
+
+#title {
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+}
